@@ -9,6 +9,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added recognition for another simple warning to bounce processing.
+      (LP: #1263247)
+
     - Fixed a few failing tests in tests/test_handlers.py.  (LP: #1262950)
 
     - Fixed bin/arch to not create scrubbed attachments for messages skipped
